--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hooks_riverpod: ^1.0.4
   auto_size_text: ^3.0.0
   fl_chart: ^0.55.1
+  decimal: ^2.3.0
 
 dev_dependencies:
   flutter_test:
