--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   fl_chart: ^0.55.1
   decimal: ^2.3.0
   dio: ^4.0.6
+  json_serializable: ^6.4.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
