--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   json_serializable: ^6.4.0
   shimmer: ^2.0.0
   easy_mask: ^2.0.1
+  rounded_loading_button: ^2.1.0
+  empty_widget: ^0.0.5
 
 dev_dependencies:
   flutter_test:
